--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@ header {
   gap: 15px;
 }
 
-.info-header div {
+.buttons-header {
   display: flex;
   align-items: center;
   gap: 5px;
@@ -90,9 +90,13 @@ header {
   align-items: center;
 }
 
-.infos-header div {
+.buttons-header {
   display: flex;
   gap: 20px;
+}
+
+.mobile-menu-btn {
+  display: none;
 }
 
 main {
@@ -114,7 +118,8 @@ h2 {
 }
 
 .image img {
-  height: 500px;
+  height: 70%;
+  width: 95%;
 }
 
 .description-title h3 {
@@ -174,4 +179,79 @@ h2 {
 
 .btn-2:hover {
   background-color: #b388ff;
+}
+
+@media only screen and (max-width: 820px) {
+  .image {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .header-one {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    margin-top: 5px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .mobile-menu-btn {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    font-size: 20px;
+  }
+
+  .buttons-header {
+    display: none;
+  }
+
+  h2 {
+    width: 100%;
+  }
+
+  .image {
+    display: none;
+  }
+
+  .info-header {
+    display: none;
+  }
+
+  .description-title {
+    flex-direction: row;
+    margin: 0 auto;
+  }
+
+  .about {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .description {
+    width: 100%;
+  }
+
+  #title {
+    display: flex;
+  }
+
+  .buttons {
+    width: 100%;
+  }
+
+  .btn-1 {
+    width: 55%;
+  }
+
+  .btn-2 {
+    width: 45%;
+  }
 }
